--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuejs-datepicker": "^1.6.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
